[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
arc-swap = "1.8.0"
axum = "0.8.7"
clap = { version = "4.5.53", features = ["derive"] }
crossbeam = "0.8.4"
dashmap = "6.1.0"
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = { version = "0.1.19", features = [
    "client",
    "http1",
    "http2",
    "tokio",
] }
lazy_static = "1.5"
matchit = "0.9.0"
moka = { version = "0.12.12", features = ["sync"] }
notify = "8.2.0"
parking_lot = "0.12.5"
rand = "0.9.2"
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.33"
smallvec = "1.15.1"
thiserror = "2.0"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
